test: Update controller tests to use MockitoBean and add AdminPostController tests